# study_advanced_lesson_3_db

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml  test.yml
api_service/: api_service.py  helpers.py
app/: main.py
app/database/: engine.py  users.py
app/models/: Users.py
app/routers/: status.py  users.py
qa_study_lesson_1/: first_task_api_tests.py
qa_study_lesson_1/first_task_api_tests/: first_task_api_tests.py
qa_study_lesson_1/second_task_api_service/: api_service.py  tests.py
qa_study_lesson_1/tests/: test_first_task_api.py  test_second_task_api_service.py
tests/: conftest.py  test_smoke.py  test_users.py
tests/models/: user.py
tests/utils/: base_session.py  config.py  fixture_sessions.py
