[tool.poetry]
name = "study-advanced"
version = "0.1.0"
description = "Study project by python qa advanced"
authors = ["L4m4w <l4p41@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.2"
requests = "^2.32.5"
jsonschema = "^4.25.1"
fastapi = "^0.116.2"
pydantic = "^2.11.9"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
email-validator = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
